--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "grunt-contrib-copy",
+  "name": "grunt-contrib-copy-faster",
   "description": "Copy files and folders",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "author": {
     "name": "Grunt Team",
     "url": "http://gruntjs.com/"
   },
-  "repository": "gruntjs/grunt-contrib-copy",
+  "repository": "db2222/grunt-contrib-copy-faster",
   "license": "MIT",
   "engines": {
     "node": ">=0.10.0"
